--- a/pythonsql.ipynb
+++ b/pythonsql.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMeQ9ht1lnGAtiIu3t94Vhf",
+      "authorship_tag": "ABX9TyNGU0P6CNkooWlNfsCM+XdO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,6 +104,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#*Importing mysql connector in colab*"
+      ],
+      "metadata": {
+        "id": "BbV2oobzVdfp"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import mysql.connector as sql"
@@ -113,6 +122,15 @@
       },
       "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# *creating a database*"
+      ],
+      "metadata": {
+        "id": "KKSd4f79WBtY"
+      }
     },
     {
       "cell_type": "code",
@@ -145,6 +163,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# *create a table and insert the value in the table*"
+      ],
+      "metadata": {
+        "id": "ewHKiPFuWRrl"
+      }
     },
     {
       "cell_type": "code",
