--- a/pythonsql.ipynb
+++ b/pythonsql.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNGU0P6CNkooWlNfsCM+XdO",
+      "authorship_tag": "ABX9TyNeuKyx8Xx14mURr1WJYeJp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "SNcZ3BxI8G5F",
-        "outputId": "ea87c960-3409-4366-aef2-34411b672abe"
+        "outputId": "1948ffdd-c7ba-4dcc-e2f4-7834af14a49f"
       },
       "outputs": [
         {
@@ -44,7 +44,7 @@
             "Collecting mysql-connector-python\n",
             "  Downloading mysql_connector_python-9.4.0-cp312-cp312-manylinux_2_28_x86_64.whl.metadata (7.5 kB)\n",
             "Downloading mysql_connector_python-9.4.0-cp312-cp312-manylinux_2_28_x86_64.whl (33.9 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m33.9/33.9 MB\u001b[0m \u001b[31m59.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m33.9/33.9 MB\u001b[0m \u001b[31m59.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: mysql-connector-python\n",
             "Successfully installed mysql-connector-python-9.4.0\n"
           ]
@@ -77,9 +77,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vHsMfhKgF5sM",
-        "outputId": "a8993ba6-591a-497e-b45b-64cf1cfddb2f"
+        "outputId": "d99a8a28-e028-49d5-a4c1-de347307f9bd"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -120,7 +120,7 @@
       "metadata": {
         "id": "XRttp7Ig8Hq_"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -151,9 +151,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UvnWhCE7FcqH",
-        "outputId": "05984605-743f-40fd-fb5a-07988950c294"
+        "outputId": "45b5c356-1246-44b7-987f-bda977553a5c"
       },
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,14 +193,14 @@
       "metadata": {
         "id": "go6Ak3-dPNBA"
       },
-      "execution_count": 21,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "cursor.execute(\"SELECT*FROM students\")\n",
-        "rows=cursor.fetchone()\n",
+        "rows=cursor.fetchmany(1)\n",
         "for row in rows:\n",
         "  print(row)"
       ],
@@ -209,30 +209,92 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D7_KX3vyTM3X",
-        "outputId": "71e58cde-e888-4ae9-92dc-e0b648e73367"
+        "outputId": "ca378538-8d2d-4e9b-9bb5-1d0f07086ff3"
       },
-      "execution_count": 23,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1\n",
-            "Pratyush\n",
-            "17\n",
-            "A\n"
+            "(1, 'Pratyush', 17, 'A')\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import mysql.connector as sql\n",
+        "\n",
+        "con = sql.connect(\n",
+        "    host=\"localhost\",\n",
+        "    user=\"root\",\n",
+        "    password=\"root\",\n",
+        "    database=\"APPLE1\"\n",
+        ")\n",
+        "cursor = con.cursor()\n",
+        "name_to_update = 'Pratyush'\n",
+        "new_age = 18\n",
+        "new_grade = 'A+'\n",
+        "\n",
+        "cursor.execute(\"UPDATE students SET AGE = %s, GRADE = %s WHERE NAME = %s\", (new_age, new_grade, name_to_update))\n",
+        "con.commit()\n",
+        "\n",
+        "print(cursor.rowcount, \"record(s) updated successfully .\")\n"
+      ],
       "metadata": {
-        "id": "X1LZlz1pTjXQ"
+        "id": "X1LZlz1pTjXQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9425a657-72f4-489d-f20d-a0f4751be2ed"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 record(s) updated successfully .\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import mysql.connector as sql\n",
+        "con = sql.connect(\n",
+        "    host=\"localhost\",\n",
+        "    user=\"root\",\n",
+        "    password=\"root\",\n",
+        "    database=\"APPLE1\"\n",
+        ")\n",
+        "cursor = con.cursor()\n",
+        "name_to_delete = 'Piyush'\n",
+        "cursor.execute(\"DELETE FROM students WHERE NAME = %s\", (name_to_delete,))\n",
+        "con.commit()\n",
+        "\n",
+        "print(cursor.rowcount, \"record(s) deleted successfully.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Rl0qgEEKv9CU",
+        "outputId": "c22487b8-d2b9-4dec-c7bd-b5f802815fb1"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 record(s) deleted successfully.\n"
+          ]
+        }
+      ]
     }
   ]
 }
